[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/icon_signals.svg" type="Texture" id=1]
[ext_resource path="res://scenes/main_container/left_container/export/connection_path/connection_path.gd" type="Script" id=2]
[ext_resource path="res://scenes/utility/python_watcher/PythonWatcher.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/main_container.tres" type="Theme" id=4]
[ext_resource path="res://images/icon_cylinder.svg" type="Texture" id=5]

[node name="ConnectionPath" type="HBoxContainer"]
margin_top = 28.0
margin_right = 460.0
margin_bottom = 50.0
theme = ExtResource( 4 )
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconConnection" type="TextureRect" parent="."]
margin_right = 16.0
margin_bottom = 22.0
texture = ExtResource( 1 )

[node name="Connection" type="OptionButton" parent="."]
margin_left = 20.0
margin_right = 228.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="IconDatabase" type="TextureRect" parent="."]
margin_left = 232.0
margin_right = 248.0
margin_bottom = 22.0
texture = ExtResource( 5 )

[node name="Database" type="OptionButton" parent="."]
margin_left = 252.0
margin_right = 460.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="PythonWatcher" parent="." instance=ExtResource( 3 )]

[connection signal="hide" from="." to="." method="_on_ConnectionPath_hide"]
[connection signal="item_selected" from="Connection" to="." method="_on_Connection_item_selected"]
[connection signal="item_selected" from="Database" to="." method="_on_Database_item_selected"]
[connection signal="output" from="PythonWatcher" to="." method="_on_PythonWatcher_output"]
